--- a/src/app/explore-container/explore-container.component.scss
+++ b/src/app/explore-container/explore-container.component.scss
@@ -1,27 +1,64 @@
-#container {
-  text-align: center;
+//******************************************************
+// Like it if you like it :) Thank you
+//******************************************************
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=RocknRoll+One&display=swap');
+$color_buble: rgb(6,
+    61,
+    243);
 
+h1 {
+  margin-left: 20%;
+  font-family: 'Lobster', cursive;
+  font-size: 220%;
+  color: rgb(115, 187, 228);
+}
+
+body {
+  height: 100vh;
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  overflow: hidden;
+  filter: drop-shadow(0 0 10px white);
+}
+
+@function random_range($min, $max) {
+  $rand: random();
+  $random_range: $min +floor($rand * (($max - $min) + 1));
+  @return $random_range;
+}
+
+.snow {
+  $total: 200;
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+  width: 10px;
+  height: 10px;
+  background: white;
+  border-radius: 50%;
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+  @for $i from 1 through $total {
+    $random-x: random(1000000) * 0.0001vw;
+    $random-offset: random_range(-100000, 100000) * 0.0001vw;
+    $random-x-end: $random-x +$random-offset;
+    $random-x-end-yoyo: $random-x +($random-offset / 2);
+    $random-yoyo-time: random_range(30000, 80000) / 100000;
+    $random-yoyo-y: $random-yoyo-time * 100vh;
+    $random-scale: random(10000) * 0.0001;
+    $fall-duration: random_range(10, 30) * 1s;
+    $fall-delay: random(30) * -1s;
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+    &:nth-child(#{$i}) {
+      opacity: random(10000) * 0.0001;
+      transform: translate($random-x, -10px) scale($random-scale);
+      animation: fall-#{$i} $fall-duration $fall-delay linear infinite;
+    }
 
-  color: #8c8c8c;
+    @keyframes fall-#{$i} {
+      #{percentage($random-yoyo-time)} {
+        transform: translate($random-x-end, $random-yoyo-y) scale($random-scale);
+      }
 
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+      to {
+        transform: translate($random-x-end-yoyo, 100vh) scale($random-scale);
+      }
+    }
+  }
 }
