--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,35 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
+ <app-explore-container name="HOO"></app-explore-container>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+ <ion-card>
+        <ion-card-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+            <ion-card-title>
+                Приклад 1
+            </ion-card-title>
+
+
+        </ion-card-header>
+        <ion-button (click)="ras()">Приклад1</ion-button>
+        <ion-button (click)="ras1()">Приклад1_1</ion-button>
+    </ion-card>
+    <ion-card>
+        <ion-card-header>
+
+            <ion-card-title>
+                Приклад 2
+            </ion-card-title>
+
+
+        </ion-card-header>
+        <ion-button (click)="ras2()">Приклад2</ion-button>
+        <ion-button (click)="ras2_1()">Приклад2_1</ion-button>
+        <ion-button (click)="ras2_2()">Приклад2_2</ion-button>
+        <ion-button (click)="ras2_3()">Приклад2_3</ion-button>
+    </ion-card>
+
+
+ 
 </ion-content>
