--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,18 +1,22 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-     <ion-icon name="planet-outline"></ion-icon>
+      <ion-icon name="planet-outline"></ion-icon>
       <ion-label>Лекція8</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-     <ion-icon name="trail-sign-outline"></ion-icon>
+      <ion-icon name="trail-sign-outline"></ion-icon>
       <ion-label>HOO</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="rocket-outline"></ion-icon>
       <ion-label>Приклад</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="tab4">
+      <ion-icon name="boat-outline"></ion-icon>
+      <ion-label>Subject</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
